--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "phaser": "^3.70.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.7.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.0"
   }
